--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,7 +19,7 @@
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet" href="{% static 'css/vendor.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/bootstrap-icons/font/bootstrap-icons.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- CSS Front Template -->
     <link rel="stylesheet" href="{% static 'css/theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/toastify/toastify.css' %}">
@@ -111,11 +111,11 @@
 
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item" href="">پروفایل</a>
-                                <a class="dropdown-item" href="">خروج</a>
+                                <a class="dropdown-item" href="{% url 'accounts:logout' %}">خروج</a>
                             </div>
 
                             {% else %}
-                            <a class="btn btn-primary btn-transition" href="">ورود</a>
+                            <a class="btn btn-primary btn-transition" href="{% url 'accounts:login' %}">ورود</a>
                             {% endif %}
                         </li>
                     </ul>
@@ -582,6 +582,7 @@
     </script>
     <!-- JS Custom-->
     <script src="{% static 'js/custom.js' %}"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- JS Cart-->
     <script>
         function addToCart(product_id) {
@@ -642,7 +643,7 @@
     {% block extra_js %} {% endblock extra_js %}
 
     {% block extra_js_no_compress %} {% endblock extra_js_no_compress %}
-
+    {% include 'massage.html' %}
 
 </body>
 
