--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -62,7 +62,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link  {% if request.resolver_match.view_name  == 'website:index' %} active {% endif %}" href="">صفحه اصلی</a>
+                            <a class="nav-link  {% if request.resolver_match.view_name  == 'website:index' %} active {% endif %}" href="{% url 'website:index' %}">صفحه اصلی</a>
                         </li>
 
 
@@ -96,7 +96,7 @@
                             </button> -->
                             <a href="" class="btn btn-ghost-secondary btn-icon">
                                 <i class="bi-basket"></i>
-                                <span class="cart-item-count" id="total-cart-item-count">{{cart.get_total_quantity}}</span>
+                                <span class="cart-item-count" id="total-cart-item-count"></span>
                             </a>
                             <!-- End Shopping Cart -->
                             {% if request.user.is_authenticated %}
@@ -104,7 +104,7 @@
                             <button class="btn btn-ghost-secondary btn-icon" id="dropdownMenuLink"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="avatar avatar-sm avatar-circle">
-                                    <img class="avatar-img" src=""
+                                    <img class="avatar-img" src="{% static 'img/160x160/img10.jpg' %}"
                                         alt="Image Description">
                                 </span>
                             </button>
