--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -67,10 +67,10 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.view_name  == 'shop:product-grid' %} active {% endif %}" href="">لیست محصولات</a>
+                            <a class="nav-link {% if request.resolver_match.view_name  == 'shop:product-grid' %} active {% endif %}" href="{% url 'shop:products-grid' %}">لیست محصولات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.view_name  == 'website:about' %} active {% endif %}" href="">درباره ما</a>
+                            <a class="nav-link {% if request.resolver_match.view_name  == 'website:about' %} active {% endif %}" href="{% url 'website:about' %}">درباره ما</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.view_name  == 'website:contact' %} active {% endif %}" href="">ارتباط با ما</a>
