Create Data Fake

--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -44,8 +44,8 @@
                 <!-- Navbar Toggle -->
                 <div class="d-grid">
                     <button type="button" class="navbar-toggler btn btn-white mb-3" data-bs-toggle="collapse"
-                        data-bs-target="#navbarVerticalNavMenu" aria-label="Toggle navigation" aria-expanded="false"
-                        aria-controls="navbarVerticalNavMenu">
+                            data-bs-target="#navbarVerticalNavMenu" aria-label="Toggle navigation" aria-expanded="false"
+                            aria-controls="navbarVerticalNavMenu">
                         <span class="d-flex justify-content-between align-items-center">
                             <span class="text-dark">فیلتر کنید</span>
 
@@ -72,7 +72,7 @@
                                 <div class="form-group">
                                     <label class="form-label d-flex" for="search-query-filter">جستو جو</label>
                                     <input class="form-control" placeholder="واژه مورد نظر را وارد نمایید" type="text"
-                                        name="q" id="search-query-filter">
+                                           name="q" id="search-query-filter">
                                 </div>
                             </div>
                         </div>
@@ -83,12 +83,12 @@
                                 <div class="form-group">
                                     <label class="form-label d-flex" for="min-price-filter">کمترین قیمت</label>
                                     <input class="form-control" type="number" name="min_price"
-                                        placeholder="کمترین قیمت مد نظر" id="min-price-filter">
+                                           placeholder="کمترین قیمت مد نظر" id="min-price-filter">
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label d-flex" for="max-price-filter">بیشترین قیمت</label>
                                     <input class="form-control" type="number" name="max_price"
-                                        placeholder="بیشترین قیمت مد نظر" id="max-price-filter">
+                                           placeholder="بیشترین قیمت مد نظر" id="max-price-filter">
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                             <div class="d-grid gap-2">
                                 <div class="mb-2 mb-sm-0 me-sm-2">
                                     <select class="form-select form-select-sm" name="category_id"
-                                        id="category-id-filter">
+                                            id="category-id-filter">
                                         <option value="" selected>انتخاب دسته بندی</option>
                                         {% for category in categories %}
                                         <option value="{{category.id}}">{{category.title}}</option>
@@ -108,9 +108,10 @@
                         </div>
                         <div class="d-grid">
                             <button type="submit" class="btn btn-outline-primary btn-transition mb-3">اعمال
-                                فیلتر</button>
+                                فیلتر
+                            </button>
                             <a href=""
-                                class="btn btn-outline-danger btn-transition mb-3">حذف فیلتر ها</a>
+                               class="btn btn-outline-danger btn-transition mb-3">حذف فیلتر ها</a>
                         </div>
                     </form>
                 </div>
@@ -123,7 +124,7 @@
         <div class="col-lg-9">
             <div class="row align-items-center mb-5">
                 <div class="col-sm mb-3 mb-sm-0">
-                    <h6 class="mb-0">{{total_items}} محصول</h6>
+                    <h6 class="mb-0"></h6>
                 </div>
 
                 <div class="col-sm-auto">
@@ -172,69 +173,80 @@
             <!-- End Row -->
 
             <div class="row row-cols-sm-2 row-cols-md-3 mb-10">
-
+                {% for object in object_list %}
                 <div class="col mb-4">
                     <!-- Card -->
                     <div class="card card-bordered shadow-none text-center h-100">
                         <div class="card-pinned">
-                            <img class="card-img-top" src="" alt="Image Description">
+                            <img class="card-img-top" src="{{object.image.url}}" alt="Image Description">
 
                             <div class="card-pinned-top-end">
-
+                                {% if request.user.is_authenticated %}
                                 <button type="button"
-                                    class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if object.id in wishlist_items %} active {% endif %} "
-                                    data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
-                                    onclick="addToWishlist(this,`{{object.id}}`)">
+                                        class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if object.id in wishlist_items %} active {% endif %} "
+                                        data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
+                                        onclick="addToWishlist(this,`{{object.id}}`)">
                                     <i class="bi-heart"></i>
                                 </button>
-
+                                {% endif %}
                             </div>
                         </div>
 
                         <div class="card-body">
-                            <div class="mb-2">
-
-                                <a class="link-sm link-secondary" href="#">  </a>
-
+                           <div class="mb-2">
+                                {% for category in object.category.all %}
+                                    <a class="link-sm link-secondary" href="#">{{ category.title }}</a>
+                                    {% if not forloop.last %}, {% endif %}
+                                {% empty %}
+                                    <p>No categories available.</p>
+                                {% endfor %}
                             </div>
+
 
                             <h4 class="card-title">
                                 <a class="text-dark"
-                                    href=""></a>
+                                   href="">{{object.title}}</a>
                             </h4>
-
+                            {% if object.is_discounted %}
                             <p class="card-text text-dark fs-4">
-                                <span class="formatted-price"></span>
+                                <span class="formatted-price">{{object.get_price}}</span>
                                 <span
-                                    class="text-body me-1 fs-6 formatted-price text-decoration-line-through"></span>
+                                        class="text-body me-1 fs-6 formatted-price text-decoration-line-through">{{object.price}}</span>
                             </p>
-
-                            <p class="card-text text-dark fs-4 formatted-price"> </p>
-
+                            {% else %}
+                            <p class="card-text text-dark fs-4 formatted-price"> {{object.price}}</p>
+                            {% endif %}
                         </div>
 
                         <div class="card-footer pt-0">
                             <!-- Rating -->
-                            <a class="d-inline-flex align-items-center mb-3" href="#">
-                                 <span><i
-                                        class="bi bi-star-fill star-rate"></i></span>
+<!--                            <a class="d-inline-flex align-items-center mb-3" href="#">-->
+<!--                                {% for i in "12345" %}-->
+<!--                                {% if i|add:0 <= object.avg_rate %} <span><i-->
+<!--                                    class="bi bi-star-fill star-rate"></i></span>-->
+<!--                                {% else %}-->
+<!--                                <span><i class="bi bi-star star-rate"></i></span>-->
+<!--                                {% endif %}-->
 
-                                    <span><i class="bi bi-star star-rate"></i></span>
-
-
-
-                                    <span class="ms-1"></span>
-                            </a>
+<!--                                {% endfor %}-->
+<!--                                <span class="ms-1">{{object.avg_rate}}/5</span>-->
+<!--                            </a>-->
                             <!-- End Rating -->
 
                             <button type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
-                                onclick="addToCart('{{object.id}}')">افزودن به سبد
-                                خرید</button>
+                                    onclick="addToCart('{{object.id}}')">افزودن به سبد
+                                خرید
+                            </button>
                         </div>
                     </div>
                     <!-- End Card -->
                 </div>
-
+                {% empty %}
+                <div class="row text-center w-100 py-5">
+                    <p class="text-center">هیچ کالایی برای نمایش وجود ندارد</p>
+                </div>
+                <!-- End Col -->
+                {% endfor %}
                 <div class="row text-center w-100 py-5">
                     <p class="text-center">هیچ کالایی برای نمایش وجود ندارد</p>
                 </div>
@@ -251,7 +263,7 @@
 
                     <li class="page-item">
                         <button class="page-link" onclick="changePage(`{{ page_obj.previous_page_number }}`)"
-                            aria-label="Previous">
+                                aria-label="Previous">
                             <span aria-hidden="true">
                                 <i class="bi-chevron-double-right small"></i>
                             </span>
@@ -259,21 +271,19 @@
                     </li>
 
                     <li class="page-item active"><a class="page-link"></a></li>
-                     <li class="page-item">
-                        <button class="page-link" onclick="changePage(`{{i}}`)"></button></li>
+                    <li class="page-item">
+                        <button class="page-link" onclick="changePage(`{{i}}`)"></button>
+                    </li>
 
 
-
-
-
-                        <li class="page-item">
-                            <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
+                    <li class="page-item">
+                        <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
                                 aria-label="Previous">
                                 <span aria-hidden="true">
                                     <i class="bi-chevron-double-left small"></i>
                                 </span>
-                            </button>
-                        </li>
+                        </button>
+                    </li>
 
 
                 </ul>
@@ -305,10 +315,10 @@
                     <div class="input-card input-card-pill input-card-sm border mb-3">
                         <div class="input-card-form">
                             <input class="form-control border-0 me-1" type="text" placeholder="نام"
-                                        name="first_name" hidden="">
+                                   name="first_name" hidden="">
                             <label for="subscribeForm" class="form-label visually-hidden">ایمیل را وارد کنید</label>
                             <input type="email" class="form-control form-control-lg" name="email"
-                                placeholder="ایمیل خود را وارد نمایید" aria-label="ایمیل خود را وارد کنید">
+                                   placeholder="ایمیل خود را وارد نمایید" aria-label="ایمیل خود را وارد کنید">
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg rounded-pill">ثبت نام</button>
                     </div>
