--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -193,12 +193,12 @@
                         </div>
 
                         <div class="card-body">
-                           <div class="mb-2">
+                            <div class="mb-2">
                                 {% for category in object.category.all %}
-                                    <a class="link-sm link-secondary" href="#">{{ category.title }}</a>
-                                    {% if not forloop.last %}, {% endif %}
+                                <a class="link-sm link-secondary" href="#">{{ category.title }}</a>
+                                {% if not forloop.last %}, {% endif %}
                                 {% empty %}
-                                    <p>No categories available.</p>
+                                <p>No categories available.</p>
                                 {% endfor %}
                             </div>
 
@@ -220,17 +220,17 @@
 
                         <div class="card-footer pt-0">
                             <!-- Rating -->
-<!--                            <a class="d-inline-flex align-items-center mb-3" href="#">-->
-<!--                                {% for i in "12345" %}-->
-<!--                                {% if i|add:0 <= object.avg_rate %} <span><i-->
-<!--                                    class="bi bi-star-fill star-rate"></i></span>-->
-<!--                                {% else %}-->
-<!--                                <span><i class="bi bi-star star-rate"></i></span>-->
-<!--                                {% endif %}-->
+                            <!--                            <a class="d-inline-flex align-items-center mb-3" href="#">-->
+                            <!--                                {% for i in "12345" %}-->
+                            <!--                                {% if i|add:0 <= object.avg_rate %} <span><i-->
+                            <!--                                    class="bi bi-star-fill star-rate"></i></span>-->
+                            <!--                                {% else %}-->
+                            <!--                                <span><i class="bi bi-star star-rate"></i></span>-->
+                            <!--                                {% endif %}-->
 
-<!--                                {% endfor %}-->
-<!--                                <span class="ms-1">{{object.avg_rate}}/5</span>-->
-<!--                            </a>-->
+                            <!--                                {% endfor %}-->
+                            <!--                                <span class="ms-1">{{object.avg_rate}}/5</span>-->
+                            <!--                            </a>-->
                             <!-- End Rating -->
 
                             <button type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
@@ -242,52 +242,55 @@
                     <!-- End Card -->
                 </div>
                 {% empty %}
-                <div class="row text-center w-100 py-5">
-                    <p class="text-center">هیچ کالایی برای نمایش وجود ندارد</p>
-                </div>
-                <!-- End Col -->
+
+
                 {% endfor %}
-                <div class="row text-center w-100 py-5">
-                    <p class="text-center">هیچ کالایی برای نمایش وجود ندارد</p>
-                </div>
-                <!-- End Col -->
-
-
             </div>
             <!-- End Row -->
 
 
             <!-- Pagination -->
+           {% if page_obj.has_other_pages %}
+            <!-- Pagination -->
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
-
+                    {% if page_obj.has_previous %}
                     <li class="page-item">
                         <button class="page-link" onclick="changePage(`{{ page_obj.previous_page_number }}`)"
-                                aria-label="Previous">
+                            aria-label="Previous">
                             <span aria-hidden="true">
                                 <i class="bi-chevron-double-right small"></i>
                             </span>
                         </button>
                     </li>
+                    {% endif %}
+                    {{page_obj.page_range}}
+                    {% for i in page_obj.paginator.page_range %}
+                    {% if page_obj.number == i %}
+                    <li class="page-item active"><a class="page-link">{{ i }}</a></li>
+                    {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %} <li class="page-item">
+                        <button class="page-link" onclick="changePage(`{{i}}`)">{{ i }}</button></li>
 
-                    <li class="page-item active"><a class="page-link"></a></li>
-                    <li class="page-item">
-                        <button class="page-link" onclick="changePage(`{{i}}`)"></button>
-                    </li>
+                        {% endif %}
+
+                        {% endfor %}
 
 
-                    <li class="page-item">
-                        <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
+                        {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
                                 aria-label="Previous">
                                 <span aria-hidden="true">
                                     <i class="bi-chevron-double-left small"></i>
                                 </span>
-                        </button>
-                    </li>
-
+                            </button>
+                        </li>
+                        {% endif %}
 
                 </ul>
             </nav>
+            {% endif %}
+
 
             <!-- End Pagination -->
         </div>
