--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load humanize %}
 
 {% block content %}
 
@@ -18,7 +18,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb mb-0 ">
                         <li class="breadcrumb-item ps-2">
-                            <a href="">خانه</a>
+                            <a href="{% url 'website:index' %}">خانه</a>
                         </li>
                         <li class="breadcrumb-item">
                             <a href="">فروشگاه</a>
@@ -209,13 +209,17 @@
                             </h4>
                             {% if object.is_discounted %}
                             <p class="card-text text-dark fs-4">
-                                <span class="formatted-price">{{object.get_price}}</span>
-                                <span
-                                        class="text-body me-1 fs-6 formatted-price text-decoration-line-through">{{object.price}}</span>
+                                <span class="formatted-price">{{ object.discount_price|intcomma }} تومان</span>
+                                <span class="text-body me-1 fs-6 formatted-price text-decoration-line-through">
+                                {{ object.price|intcomma }} تومان
+                            </span>
                             </p>
                             {% else %}
-                            <p class="card-text text-dark fs-4 formatted-price"> {{object.price}}</p>
+                            <p class="card-text text-dark fs-4 formatted-price">
+                                {{ object.price|intcomma }} تومان
+                            </p>
                             {% endif %}
+
                         </div>
 
                         <div class="card-footer pt-0">
@@ -250,14 +254,14 @@
 
 
             <!-- Pagination -->
-           {% if page_obj.has_other_pages %}
+            {% if page_obj.has_other_pages %}
             <!-- Pagination -->
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
                     <li class="page-item">
                         <button class="page-link" onclick="changePage(`{{ page_obj.previous_page_number }}`)"
-                            aria-label="Previous">
+                                aria-label="Previous">
                             <span aria-hidden="true">
                                 <i class="bi-chevron-double-right small"></i>
                             </span>
@@ -268,24 +272,26 @@
                     {% for i in page_obj.paginator.page_range %}
                     {% if page_obj.number == i %}
                     <li class="page-item active"><a class="page-link">{{ i }}</a></li>
-                    {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %} <li class="page-item">
-                        <button class="page-link" onclick="changePage(`{{i}}`)">{{ i }}</button></li>
+                    {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
+                    <li class="page-item">
+                        <button class="page-link" onclick="changePage(`{{i}}`)">{{ i }}</button>
+                    </li>
 
-                        {% endif %}
+                    {% endif %}
 
-                        {% endfor %}
+                    {% endfor %}
 
 
-                        {% if page_obj.has_next %}
-                        <li class="page-item">
-                            <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <button class="page-link" onclick="changePage(`{{ page_obj.next_page_number }}`)"
                                 aria-label="Previous">
                                 <span aria-hidden="true">
                                     <i class="bi-chevron-double-left small"></i>
                                 </span>
-                            </button>
-                        </li>
-                        {% endif %}
+                        </button>
+                    </li>
+                    {% endif %}
 
                 </ul>
             </nav>
