--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -64,7 +64,7 @@
 
                 <!-- Navbar Collapse -->
                 <div id="navbarVerticalNavMenu" class="collapse navbar-collapse">
-                    <form action="." class="w-100">
+                    <form action="{% url 'shop:products-grid' %}" class="w-100">
 
                         <div class="border-bottom pb-4 mb-4">
                             <h5>جستو جوی کالا</h5>
