--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -110,7 +110,7 @@
                             <button type="submit" class="btn btn-outline-primary btn-transition mb-3">اعمال
                                 فیلتر
                             </button>
-                            <a href=""
+                            <a href="{% url 'shop:products-grid' %}"
                                class="btn btn-outline-danger btn-transition mb-3">حذف فیلتر ها</a>
                         </div>
                     </form>
@@ -124,15 +124,14 @@
         <div class="col-lg-9">
             <div class="row align-items-center mb-5">
                 <div class="col-sm mb-3 mb-sm-0">
-                    <h6 class="mb-0"></h6>
+                    <h6 class="mb-0">تعداد کل محصولات: {{ total_items }}</h6>
                 </div>
-
                 <div class="col-sm-auto">
                     <form action="{% url 'shop:products-grid' %}">
                         <div class="d-sm-flex justify-content-sm-end align-items-center">
                             <!-- Select -->
                             <div class="mb-2 mb-sm-0 me-sm-2">
-                                <select class="form-select form-select-sm" id="order-by">
+                                <select class="form-select form-select-sm" id="order-by-filter">
                                     <option value="" selected>مرتب سازی</option>
                                     <option value="-created_date">جدیدترین</option>
                                     <option value="created_date">قدیمی ترین</option>
@@ -143,7 +142,7 @@
                             <!-- End Select -->
                             <!-- Select -->
                             <div class="mb-2 mb-sm-0 me-sm-2">
-                                <select class="form-select form-select-sm" id="page-size">
+                                <select class="form-select form-select-sm" id="page-size-filter">
                                     <option value="" selected>تعداد در صفحه</option>
                                     <option value="5">5</option>
                                     <option value="10">10</option>
@@ -197,7 +196,7 @@
                         <div class="card-body">
                             <div class="mb-2">
                                 {% for category in object.category.all %}
-                                <a class="link-sm link-secondary" href="">{{ category.title }}</a>
+                                <a class="link-sm link-secondary" href="#">{{ category.title }}</a>
                                 {% if not forloop.last %}, {% endif %}
                                 {% empty %}
                                 <p>No categories available.</p>
@@ -248,8 +247,9 @@
                     <!-- End Card -->
                 </div>
                 {% empty %}
-
-
+                <div class="row text-center w-100 py-5">
+                    <p class="text-center">هیچ کالایی برای نمایش وجود ندارد</p>
+                </div>
                 {% endfor %}
             </div>
             <!-- End Row -->
@@ -394,22 +394,8 @@
         $("#min-price-filter").val(current_url_params.get("min_price") || "")
         $("#max-price-filter").val(current_url_params.get("max_price") || "")
         $("#category-id-filter").val(current_url_params.get("category_id") || "")
+    });
 
-    });
-    $('#page-size-filter').change(function () {
-        let current_url_params = new URLSearchParams(window.location.search)
-        var selectedOption = $(this).val();
-        current_url_params.set("page_size", selectedOption)
-        let new_url = window.location.pathname + "?" + current_url_params.toString()
-        window.location.href = new_url
-    });
-    $('#order-by-filter').change(function () {
-        let current_url_params = new URLSearchParams(window.location.search)
-        var selectedOption = $(this).val();
-        current_url_params.set("order_by", selectedOption)
-        let new_url = window.location.pathname + "?" + current_url_params.toString()
-        window.location.href = new_url
-    });
 
 </script>
 
