--- a/core/templates/shop/product-detail.html
+++ b/core/templates/shop/product-detail.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
-
-
+{% load shop_tags %}
 {% block content %}
 
 <!-- Hero -->
@@ -280,8 +279,7 @@
     <!-- End Row -->
 </div>
 <!-- End Content -->
-
-
+{% similar_products object %}
 <!-- Review Section -->
 <div id="reviewSection" class="container content-space-b-2 content-space-b-lg-3">
     <div class="row">
