Create Contact And Newsletter

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -78,7 +78,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.resolver_match.view_name  == 'website:contact' %} active {% endif %}"
-                           href="">ارتباط با ما</a>
+                           href="{% url 'website:contact' %}">ارتباط با ما</a>
                     </li>
 
 
