--- a/core/templates/website/index.html
+++ b/core/templates/website/index.html
@@ -400,21 +400,20 @@
                 </div>
                 <!-- End Heading -->
 
-                <form method="post" action="">
+                <form method="post" action="{% url 'contact:newsletter' %}">
                     {% csrf_token %}
                     <!-- Input Card -->
                     <div class="input-card input-card-pill input-card-sm border mb-3">
                         <div class="input-card-form">
-                            <input class="form-control border-0 me-1" type="text" placeholder="نام"
-                                        name="first_name" hidden="">
                             <label for="subscribeForm" class="form-label visually-hidden">ایمیل را وارد کنید</label>
                             <input type="email" class="form-control form-control-lg" name="email"
-                                placeholder="ایمیل خود را وارد نمایید" aria-label="ایمیل خود را وارد کنید">
+                                placeholder="ایمیل خود را وارد نمایید" aria-label="ایمیل خود را وارد کنید" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg rounded-pill">ثبت نام</button>
                     </div>
                     <!-- End Input Card -->
                 </form>
+
 
                 <p class="small">می توانید در هر زمانی اشتراک خود را لغو کنید <a href="#">سیاست حفظ حریم خصوصی</a>
                     ما را
