--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -320,7 +320,7 @@
                 </div>
                 <!-- End Heading -->
 
-                <form method="post" action="">
+                <form method="post" action="{% url 'contact:newsletter' %}">
                     {% csrf_token %}
                     <!-- Input Card -->
                     <div class="input-card input-card-pill input-card-sm border mb-3">
