Making The Base

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-
+{% extends 'basses/base.html' %}
 
 {% block content %}
 <div class="container content-space-3 content-space-t-lg-4 content-space-b-lg-3">
