--- a/core/templates/basses/base.html
+++ b/core/templates/basses/base.html
@@ -651,7 +651,7 @@
 {% block extra_js %} {% endblock extra_js %}
 
 {% block extra_js_no_compress %} {% endblock extra_js_no_compress %}
-{% include 'massage.html' %}
+{% include 'basses/massage.html' %}
 
 </body>
 
