--- a/core/templates/website/index.html
+++ b/core/templates/website/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'basses/base.html' %}
 {% load static %}
 {% load shop_tags %}
 {% block content %}
@@ -8,27 +8,27 @@
     <div class="js-swiper-shop-classic-hero swiper bg-light">
         <div class="swiper-wrapper">
             <!-- Slide -->
+            {% for products in products %}
             <div class="swiper-slide">
                 <!-- Container -->
                 <div class="container content-space-t-2 content-space-b-3">
                     <div class="row align-items-lg-center">
                         <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
                             <div class="mb-6">
-                                <h1 class="display-4 mb-4">درپوش طرح اصلی جلو</h1>
-                                <p>فرانت علاوه بر اینکه در نوآوری‌های فنی بازی را تغییر می‌دهد، برخی از پرفروش‌ترین
-                                    کلاه‌ها را در
-                                    قفسه خود دارد.</p>
+                                <h1 class="display-4 mb-4">{{ products.title }}</h1>
+                                <p>{{ products.description }}</p>
+
                             </div>
 
                             <div class="d-flex gap-2">
-                                <a class="btn btn-primary rounded-pill" href="#">نمایش جزئیات محصول</a>
+                                <a class="btn btn-primary rounded-pill" href="{% url 'shop:products-detail' slug=products.slug %}">نمایش جزئیات محصول</a>
                             </div>
                         </div>
                         <!-- End Col -->
 
                         <div class="col-lg-6 order-lg-1">
                             <div class="w-75 mx-auto">
-                                <img class="img-fluid" src="{% static '/img/mockups/img5.png' %}" alt="Image Description">
+                                <img class="img-fluid" src="{{ products.image.url }}" alt="Image Description">
                             </div>
                         </div>
                         <!-- End Col -->
@@ -38,75 +38,7 @@
                 <!-- End Container -->
             </div>
             <!-- End Slide -->
-
-            <!-- Slide -->
-            <div class="swiper-slide">
-                <!-- Container -->
-                <div class="container content-space-t-2 content-space-b-3">
-                    <div class="row align-items-lg-center">
-                        <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
-                            <div class="mb-6">
-                                <h2 class="display-4 mb-4">اپل آیپد پرو</h2>
-                                <p>این همه جدید، تمام صفحه نمایش، و همه قدرتمند است. کاملاً بازطراحی شده و با
-                                    پیشرفته‌ترین فن‌آوری
-                                    ما بسته‌بندی شده است، شما را وادار می‌کند دوباره به توانایی iPad خود فکر کنید.
-                                </p>
-                            </div>
-
-                            <div class="d-flex gap-2">
-                                <a class="btn btn-primary rounded-pill" href="#">نمایش جزئیات محصول</a>
-
-                            </div>
-                        </div>
-                        <!-- End Col -->
-
-                        <div class="col-lg-6 order-lg-1">
-                            <div class="w-75 mx-auto">
-                                <img class="img-fluid" src="{% static '/img/mockups/img6.png' %}" alt="Image Description">
-                            </div>
-                        </div>
-                        <!-- End Col -->
-                    </div>
-                    <!-- End Row -->
-                </div>
-                <!-- End Container -->
-            </div>
-            <!-- End Slide -->
-
-            <!-- Slide -->
-            <div class="swiper-slide">
-                <!-- Container -->
-                <div class="container content-space-t-2 content-space-b-3">
-                    <div class="row align-items-lg-center">
-                        <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
-                            <div class="mb-6">
-                                <h3 class="display-4 mb-4">هودی سلیو</h3>
-                                <p>لیبل فرانسوی Celio که در سال 1985 تأسیس شد، 30 سال تخصص را در محدوده لباس‌های
-                                    مردانه معاصر خود
-                                    قرار می‌دهد. با شلوارک جین، شلوار چینی و پیراهن های چاپ شده، انتظار سبک پروازی
-                                    را برای یک شهر یا
-                                    ساحل داشته باشید.</p>
-                            </div>
-
-                            <div class="d-flex gap-2">
-                                <a class="btn btn-primary rounded-pill" href="#">نمایش جزئیات محصول</a>
-
-                            </div>
-                        </div>
-                        <!-- End Col -->
-
-                        <div class="col-lg-6 order-lg-1">
-                            <div class="w-75 mx-auto">
-                                <img class="img-fluid" src="{% static '/img/mockups/img1.png' %}" alt="Image Description">
-                            </div>
-                        </div>
-                        <!-- End Col -->
-                    </div>
-                    <!-- End Row -->
-                </div>
-                <!-- End Container -->
-            </div>
-            <!-- End Slide -->
+            {% endfor %}
         </div>
 
         <!-- Arrows -->
@@ -119,32 +51,16 @@
     <div class="position-absolute bottom-0 start-0 end-0 mb-3">
         <div class="js-swiper-shop-hero-thumbs swiper" style="max-width: 13rem;">
             <div class="swiper-wrapper">
+                {% for products in products %}
                 <!-- Slide -->
                 <div class="swiper-slide">
                     <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                        <img class="swiper-thumb-progress-avatar-img" src="{% static '/img/160x160/img11.jpg' %}"
+                        <img class="swiper-thumb-progress-avatar-img" src="{{ products.image.url }}"
                             alt="Image Description">
                     </a>
                 </div>
                 <!-- End Slide -->
-
-                <!-- Slide -->
-                <div class="swiper-slide">
-                    <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                        <img class="swiper-thumb-progress-avatar-img" src="{% static '/img/160x160/img14.jpg' %}"
-                            alt="Image Description">
-                    </a>
-                </div>
-                <!-- End Slide -->
-
-                <!-- Slide -->
-                <div class="swiper-slide">
-                    <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                        <img class="swiper-thumb-progress-avatar-img" src="{% static '/img/160x160/img15.jpg' %}"
-                            alt="Image Description">
-                    </a>
-                </div>
-                <!-- End Slide -->
+                {% endfor %}
             </div>
         </div>
     </div>
