--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -238,10 +238,10 @@
                             <!--                            </a>-->
                             <!-- End Rating -->
 
-                            <button type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
+                            <a href="{% url 'cart:cart-summary' %}" type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
                                     onclick="addToCart('{{object.id}}')">افزودن به سبد
                                 خرید
-                            </button>
+                            </a>
                         </div>
                     </div>
                     <!-- End Card -->
