Create Cart View

--- a/core/templates/basses/base.html
+++ b/core/templates/basses/base.html
@@ -98,9 +98,9 @@
                             <i class="bi-basket"></i>
                             <span class="cart-item-count ">3</span>
                         </button> -->
-                        <a href="" class="btn btn-ghost-secondary btn-icon">
+                        <a href="{% url 'cart:cart-summary' %}" class="btn btn-ghost-secondary btn-icon">
                             <i class="bi-basket"></i>
-                            <span class="cart-item-count" id="total-cart-item-count"></span>
+                            <span class="cart-item-count" id="total-cart-item-count">{{ cart.get_total_quantity }}</span>
                         </a>
                         <!-- End Shopping Cart -->
                         {% if request.user.is_authenticated %}
