--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -238,7 +238,7 @@
                             <!--                            </a>-->
                             <!-- End Rating -->
 
-                            <a href="{% url 'cart:cart-summary' %}" type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
+                            <a href="" type="button" class="btn btn-outline-primary btn-sm btn-transition rounded-pill"
                                     onclick="addToCart('{{object.id}}')">افزودن به سبد
                                 خرید
                             </a>
